--- a/_posts/2013-05-15-nocte-lux-a-low-cost-motion-activated-night-lamp.html
+++ b/_posts/2013-05-15-nocte-lux-a-low-cost-motion-activated-night-lamp.html
@@ -25,12 +25,8 @@ meta:
   _edit_last: '5'
   _cc_post_template_type: img-left-content-right
   _thumbnail_id: '100'
-author:
-  login: electronut
-  email: info@electronut.in
-  display_name: Chief Electronut
-  first_name: Chief Electronut
-  last_name: ''
+image:
+  feature: header.jpg
 ---
 <p>No, it's not the $10000 Leica lens of similar name. ;-)</p>
 <p>For this project, I wanted to try and make a simple night lamp – something that you can put under your cot and use it simply by picking it up. Useful in case you get up in the middle of the night and need a quick light. So I used a tilt switch and a 555 IC to design the circuit.</p>
