--- a/_posts/2013-06-27-preventing-raspberry-pi-wifi-from-going-into-sleep-mode.html
+++ b/_posts/2013-06-27-preventing-raspberry-pi-wifi-from-going-into-sleep-mode.html
@@ -25,12 +25,8 @@ meta:
   _edit_last: '5'
   _cc_post_template_type: img-left-content-right
   _wpas_done_all: '1'
-author:
-  login: electronut
-  email: info@electronut.in
-  display_name: Chief Electronut
-  first_name: Chief Electronut
-  last_name: ''
+image:
+  feature: header.jpg
 ---
 <p>I keep <a href="http://electronut.in/starting-raspberry-pi-wifi-ssh-and-gpio/" title="Starting Raspberry Pi: WiFi, ssh and GPIO">logged into my Raspberry Pi from my Mac</a>. The Pi is connected to my network using a USB WiFi adapter. But when I leave the login idle for a while, I find it to be (a) frozen and (b) I cannot login via a new ssh session - in fact, I can't even ping the Pi anymore. </p>
 <p>I found the solution for problem (b) above <a href="http://raspberrypi.stackexchange.com/questions/1384/how-do-i-disable-suspend-mode/4518#4518">in a StackOverflow post</a>. </p>
