fixed disqus issues

--- a/_posts/2013-06-18-starting-raspberry-pi-wifi-ssh-and-gpio.html
+++ b/_posts/2013-06-18-starting-raspberry-pi-wifi-ssh-and-gpio.html
@@ -12,6 +12,7 @@ tags:
 status: publish
 type: post
 published: true
+comments: true
 meta:
   _cc_post_template_type: img-left-content-right
   _edit_last: '5'
