--- a/_posts/2013-05-15-nocte-lux-a-low-cost-motion-activated-night-lamp.html
+++ b/_posts/2013-05-15-nocte-lux-a-low-cost-motion-activated-night-lamp.html
@@ -11,6 +11,7 @@ tags:
 status: publish
 type: post
 published: true
+comments: true
 meta:
   _cc_page_slider_on: '0'
   _cc_page_slider_cat: a:0:{}
