--- a/_posts/2013-05-22-ambient-light-sensor-using-an-op-amp-comparator.html
+++ b/_posts/2013-05-22-ambient-light-sensor-using-an-op-amp-comparator.html
@@ -12,6 +12,7 @@ tags:
 status: publish
 type: post
 published: true
+comments: true
 meta:
   _cc_page_slider_cat: a:0:{}
   _cc_page_slider_on: '0'
