--- a/_posts/2013-06-01-getting-started-with-the-atmel-attiny84-microcontroller.html
+++ b/_posts/2013-06-01-getting-started-with-the-atmel-attiny84-microcontroller.html
@@ -11,6 +11,7 @@ tags:
 status: publish
 type: post
 published: true
+comments: true
 meta:
   _cc_page_slider_on: '0'
   _cc_page_slider_cat: a:0:{}
