--- a/_posts/2013-06-04-serial-communications-with-the-attiny84.html
+++ b/_posts/2013-06-04-serial-communications-with-the-attiny84.html
@@ -12,6 +12,7 @@ tags:
 status: publish
 type: post
 published: true
+comments: true
 meta:
   _cc_post_template_date: '0'
   _cc_post_template_avatar: '0'
