--- a/_posts/2013-06-12-talking-to-ultrasonic-distance-sensor-hc-sr04-using-an-attiny84.html
+++ b/_posts/2013-06-12-talking-to-ultrasonic-distance-sensor-hc-sr04-using-an-attiny84.html
@@ -16,6 +16,7 @@ tags:
 status: publish
 type: post
 published: true
+comments: true
 meta:
   _cc_page_slider_on: '0'
   _cc_post_template_type: img-left-content-right
