--- a/_posts/2013-06-27-preventing-raspberry-pi-wifi-from-going-into-sleep-mode.html
+++ b/_posts/2013-06-27-preventing-raspberry-pi-wifi-from-going-into-sleep-mode.html
@@ -11,6 +11,7 @@ tags:
 status: publish
 type: post
 published: true
+comments: true
 meta:
   _cc_page_slider_on: '0'
   _cc_page_slider_cat: a:0:{}
