--- a/_posts/2013-07-06-backing-up-your-raspberry-pi-code-using-rsync.html
+++ b/_posts/2013-07-06-backing-up-your-raspberry-pi-code-using-rsync.html
@@ -14,6 +14,7 @@ tags:
 status: publish
 type: post
 published: true
+comments: true
 meta:
   _cc_page_slider_on: '0'
   _cc_page_slider_cat: a:0:{}
