--- a/_posts/2014-04-30-getting-started-with-attiny85-avr-programming.html
+++ b/_posts/2014-04-30-getting-started-with-attiny85-avr-programming.html
@@ -12,6 +12,7 @@ tags:
 status: publish
 type: post
 published: true
+comments: true
 meta:
   _edit_last: '5'
   _oembed_ab2bd0864bbc894eccd3c82f1f9b1310: '{{unknown}}'
