--- a/_posts/2014-05-04-a-48-lqfp-to-dip-adapter-pcb.html
+++ b/_posts/2014-05-04-a-48-lqfp-to-dip-adapter-pcb.html
@@ -16,6 +16,7 @@ tags:
 status: publish
 type: post
 published: true
+comments: true
 meta:
   _edit_last: '5'
   _oembed_d43707f278918764a45e6417ece83141: '{{unknown}}'
