--- a/_posts/2014-11-24-controlling-two-servos-with-hardware-pwm-on-the-raspberry-pi-model-a.html
+++ b/_posts/2014-11-24-controlling-two-servos-with-hardware-pwm-on-the-raspberry-pi-model-a.html
@@ -12,6 +12,8 @@ tags:
 status: publish
 type: post
 published: true
+comments: true
+comments: true
 meta:
   _edit_last: '5'
   _thumbnail_id: '911'
