updated with consulting

--- a/consulting.html
+++ b/consulting.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-section_id: about
+section_id: consulting
 skills:
   - title: Innovation
     percent: 97
@@ -48,14 +48,13 @@ members:
 desc:
   Electronut Labs is the creation of <strong>Mahesh Venkitachalam</strong> - programmer, writer,
   photographer and electronics hacker based in Bengaluru, India. We are a small
-  business focused on creating unique, useful electronics hardware and educational
-  content for Makers worldwide.
+  business focused on creating innovative electronics hardware.
 ---
 
 <div class='full' style='background: #333'>
   <div class='row'>
     <div class='large-12 columns'>
-      <h2 style='color: #fff;'>About</h2>
+      <h2 style='color: #fff;'>Consulting</h2>
     </div>
   </div>
   <div class='two spacing'></div>
@@ -70,9 +69,11 @@ desc:
       <h3>Consulting</h3>
       <div class='spacing'></div>
       <p>
-        We are available for consulting and custom work in the area of
-        microcontrollers and firmware development For project inquiries,
-        email us at <strong>info@electronut.in</strong>.
+        Need help with a hardware project or product? Drop us an email at
+        <strong>info@electronut.in</strong>. We offer consulting services on
+        AVR and Nordic nRF BLE - hardware design, firmware development, prototyping,
+        PCB design/assembly, sourcing and manufacturing. We can help you
+        bring your product to market!
       </p>
       <div class='two spacing'></div>
     </div>
