--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 layout: default
 section_id: home
 works:
-  - image: images/home/logo.png
-    class: web-design print
-    title:
-    desc:
-    url:
+  - image: images/home/zd-sm.jpg
+    class: graphic-design
+    title: ZeroDriver
+    desc: "Arduino Zero-compatible dual motor driver board for robotics and mechatronics."
+    url: https://hackaday.io/project/18253-zerodriver
   - image: images/home/snapVCC-1.2.jpg
     class: graphic-design
     title: snapVCC
     desc: "3.3/5 V regulator that snaps on to your 9V battery."
     url: https://www.crowdsupply.com/electronut-labs/snapvcc
-  - image: images/home/zd.jpg
+  - image: images/home/bluey.jpg
     class: brand wide
-    title: ZeroDriver
-    desc: "Arduino Zero compatible dual motor driver."
-    url: https://www.crowdsupply.com/electronut-labs/zerodriver
+    title: Bluey
+    desc: "Nordic nRF52832 BLE IoT board with Temperature/Humidity/Light/Accelerometer sensors."
+    url: https://hackaday.io/project/19962-bluey
   - image: images/home/pp.jpg
     class: web-design print
     title: Python Playground
@@ -72,11 +72,11 @@ works:
     title: ATtiny10
     desc: "Programming ATtiny10 using TPI."
     url: attiny10-hello/
-  - image: images/home/koch.png
+  - image: images/home/logo.png
     class: web-design print
-    title: Koch
-    desc: "Koch snowflake & the Thue-Morse sequence."
-    url: koch-snowflake-and-the-thue-morse-sequence/
+    title:
+    desc:
+    url:
 ---
 
 <div class='mod modMasonryGallery'>
