--- a/consulting.html
+++ b/consulting.html
@@ -49,6 +49,24 @@ desc:
   Electronut Labs is the creation of <strong>Mahesh Venkitachalam</strong> - programmer, writer,
   photographer and electronics hacker based in Bengaluru, India. We are a small
   business focused on creating innovative electronics hardware.
+
+works:
+  - image: /images/consulting/bluey.jpg
+    class: graphic-design
+    title: BLE IoT
+    desc:
+  - image: /images/consulting/flowmeter.jpg
+    class: web-design print
+    title: Flow meter
+    desc:
+  - image: /images/consulting/ble-tracker.jpg
+    class: graphic-design
+    title: BLE Tracker
+    desc:
+  - image: /images/consulting/ble-proto.jpg
+    class: graphic-design
+    title: BLE prototyping
+    desc:
 ---
 
 <div class='full' style='background: #333'>
@@ -71,7 +89,7 @@ desc:
       <p>
         Need help with a hardware project or product? Drop us an email at
         <strong>info@electronut.in</strong>. We offer consulting services on
-        AVR and Nordic nRF BLE - hardware design, firmware development, prototyping,
+        AVR and Nordic nRF BLE - including hardware design, firmware development, prototyping,
         PCB design/assembly, sourcing and manufacturing. We can help you
         bring your product to market!
       </p>
@@ -96,7 +114,8 @@ desc:
     </div>
   </div>
 </div>
-<div class='two spacing'></div>
+<div class='spacing'></div>
+<!--
 <div class='full' style='background: #f5f5f5'>
   <div class='row'>
     <div class='large-12 columns'>
@@ -132,6 +151,31 @@ desc:
   </div>
   <div class='two spacing'></div>
 </div>
+-->
+
+<div class='full' style='background: #f5f5f5'>
+    <div class='mod modMasonryGallery'>
+      <ul class='gallery'>
+        {% for work in page.works %}
+          <li class='{{work.class}}'>
+            <a href=''>
+              <img alt="" src="{{work.image}}" />
+              <div class='overlay'>
+                <div class='thumb-info'>
+                  <h3>{{work.title}}</h3>
+                  <p>{{work.desc}}</p>
+                </div>
+              </div>
+            </a>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+
+    <div class='four  spacing'></div>
+
+</div>
+
 <div class='full'>
   <div class='row'>
     <div class='large-12 columns'>
@@ -173,4 +217,6 @@ desc:
     </div>
   </div>
   <div class='four spacing'></div>
+
+
 </div>
