--- a/consulting.html
+++ b/consulting.html
@@ -6,7 +6,7 @@ skills:
     percent: 97
   - title: Hardware Design
     percent: 83
-  - title: Firmware Design
+  - title: Firmware Development
     percent: 89
   - title: BS
     percent: 7
