--- a/consulting.html
+++ b/consulting.html
@@ -59,9 +59,9 @@ works:
     class: web-design print
     title: Flow meter
     desc:
-  - image: /images/consulting/ble-tracker.jpg
+  - image: /images/consulting/bluey.jpg
     class: graphic-design
-    title: BLE Tracker
+    title: BLE IoT
     desc:
   - image: /images/consulting/ble-proto.jpg
     class: graphic-design
