--- a/consulting.html
+++ b/consulting.html
@@ -47,13 +47,13 @@ members:
 
 desc:
   Electronut Labs is the creation of <strong>Mahesh Venkitachalam</strong> - programmer, writer,
-  photographer and electronics hacker based in Bengaluru, India. We are a small
-  business focused on creating innovative electronics hardware.
-
+  photographer and electronics hacker based in Bengaluru, India. We have a 
+passion for electronics, an eye for design, and are uncompromising about the quality of our products. We are constantly working to bring our innovative ideas in hardware to market.
+≈ç
 works:
   - image: /images/consulting/flowaBLE.jpg
     class: graphic-design
-    title: BLE IoT
+    title: BLE consulting
     desc:
   - image: /images/consulting/flowmeter.jpg
     class: web-design print
