--- a/consulting.html
+++ b/consulting.html
@@ -46,10 +46,8 @@ members:
         url: https://twitter.com/SivaPrakazh
 
 desc:
-  Electronut Labs is the creation of <strong>Mahesh Venkitachalam</strong> - programmer, writer,
-  photographer and electronics hacker based in Bengaluru, India. We have a 
-passion for electronics, an eye for design, and are uncompromising about the quality of our products. We are constantly working to bring our innovative ideas in hardware to market.
-≈ç
+  Electronut Labs is the creation of <strong>Mahesh Venkitachalam</strong> - programmer, writer, photographer and electronics hacker based in Bengaluru, India. We have a passion for electronics, an eye for design, and are uncompromising about the quality of our products. We are constantly working to bring our innovative ideas in hardware to market.
+
 works:
   - image: /images/consulting/flowaBLE.jpg
     class: graphic-design
