added bluey page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ works:
     class: brand wide
     title: Bluey
     desc: "Nordic nRF52832 BLE IoT board with Temperature/Humidity/Light/Accelerometer sensors."
-    url: https://hackaday.io/project/19962-bluey
+    url: bluey/
   - image: images/home/pp.jpg
     class: web-design print
     title: Python Playground
