--- a/bluey.html
+++ b/bluey.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 section_id: bluey
+title: Electronut Labs - Bluey nRF52 dev board
 
 works:
   - image: /images/bluey/bluey-box.jpg
