--- a/bluey.html
+++ b/bluey.html
@@ -69,7 +69,7 @@ works:
 
     <ul>
         <li>
-          Nordic nRF52832 QFAA BLE SoC (512k RAM / 64k Flash)
+          Nordic nRF52832 QFAA BLE SoC (512k Flash / 64k RAM)
         </li>
         <li>
         TI HDC1010 Temperature/Humidity sensor
