--- a/consulting.html
+++ b/consulting.html
@@ -212,6 +212,18 @@ works:
       <p>
         <strong>Philip - Fliptronics</strong>
       </p>
+
+      <div class='spacing'></div>
+
+      <p>
+        <em>
+          Electronut Labs has developed a great solution for wireless monitoring of sensors. The integrated solution encompassed interfacing hardware, embedded code and an android app for monitoring the sensor. The entire system was delivered in a compact custom package in a very short time frame. Will definitely engage with them for our hardware projects.
+        </em>
+      </p>
+      <p>
+        <strong>Raviprakash - Hindustan Unilever</strong>
+      </p>
+
     </div>
   </div>
   <div class='four spacing'></div>
