--- a/consulting.html
+++ b/consulting.html
@@ -1,232 +1,15 @@
----
-layout: default
-section_id: consulting
-skills:
-  - title: Innovation
-    percent: 97
-  - title: Hardware Design
-    percent: 83
-  - title: Firmware Development
-    percent: 89
-  - title: BS
-    percent: 7
-
-members:
-  - name: Mahesh Venkitachalam
-    position: Founder & Chief Engineer
-    desc:
-      Smitten with electronics since childhood, Mahesh has managed to make
-      himself even more dangerous by learing some programming. Loves photography,
-      reading (especially Sci-Fi), art, and good cinema. This author of
-      Python Playground (No Starch Press, USA) has a tendency to
-      mutter "comma, space!" while reading articles written by others.
-    avatar: images/about/mahesh-portrait.jpg
-    socials:
-      - icon_class: fa fa-twitter
-        url: https://twitter.com/electronutLabs
-  - name: Rishi Shukla
-    position: Embedded Systems Engineer
-    desc:
-      Former Intern and now an integral part of the team, Rishi takes on daily
-      challenges in hardware development with enthusiasm. When he's not erasing
-      bootloaders or assembling robots, his mind is on sketching, PS4, and motorbikes
-      with large engines.
-    avatar: images/about/rishi-portrait.png
-    socials:
-      - icon_class: fa fa-twitter
-        url: https://twitter.com/rishi99es
-  - name: Shivaprakash S
-    position: Hardware Engineer
-    desc:
-      Siva is helping us with PCB design and electronics prototyping. His
-      favourite activities are wrestling with kicad and watching quality Tamil movies.
-    avatar: images/about/siva-portrait.jpg
-    socials:
-      - icon_class: fa fa-twitter
-        url: https://twitter.com/SivaPrakazh
-
-desc:
-  Electronut Labs is the creation of <strong>Mahesh Venkitachalam</strong> - programmer, writer, photographer and electronics hacker based in Bengaluru, India. We have a passion for electronics, an eye for design, and are uncompromising about the quality of our products. We are constantly working to bring our innovative ideas in hardware to market.
-
-works:
-  - image: /images/consulting/flowaBLE.jpg
-    class: graphic-design
-    title: BLE consulting
-    desc:
-  - image: /images/consulting/flowmeter.jpg
-    class: web-design print
-    title: Flow meter
-    desc:
-  - image: /images/consulting/bluey.jpg
-    class: graphic-design
-    title: BLE IoT
-    desc:
-  - image: /images/consulting/ble-proto.jpg
-    class: graphic-design
-    title: BLE prototyping
-    desc:
----
-
-<div class='full' style='background: #333'>
-  <div class='row'>
-    <div class='large-12 columns'>
-      <h2 style='color: #fff;'>Consulting</h2>
-    </div>
-  </div>
-  <div class='two spacing'></div>
-</div>
-<div class='full'>
-  <div class='row'>
-    <div class='medium-6 columns'>
-      <h3>Who We Are</h3>
-      <div class='spacing'></div>
-      <p>{{ page.desc }} </p>
-      <div class='spacing'></div>
-      <h3>Consulting</h3>
-      <div class='spacing'></div>
-      <p>
-        Need help with a hardware project or product? Drop us an email at
-        <strong>info@electronut.in</strong>. We offer consulting services on
-        AVR and Nordic nRF BLE - including hardware design, firmware development, prototyping,
-        PCB design/assembly, sourcing and manufacturing. We can help you
-        bring your product to market!
-      </p>
-      <div class='two spacing'></div>
-    </div>
-    <div class='medium-6 columns'>
-      <h3>Our skills</h3>
-      <div class='spacing'></div>
-      <div class='mod modBarGraph'>
-        <ul class='bars'>
-          {% for skill in page.skills %}
-            <li>
-              <h4 style=''>
-                {{skill.title}}
-                <strong>{{skill.percent}}%</strong>
-              </h4>
-              <p class='highlighted' data-percent='{{skill.percent}}'></p>
-            </li>
-          {% endfor %}
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-<div class='spacing'></div>
-<!--
-<div class='full' style='background: #f5f5f5'>
-  <div class='row'>
-    <div class='large-12 columns'>
-      <h3>The team</h3>
-      <div class='spacing'></div>
-    </div>
-  </div>
-  <div class='row'>
-    {% for member in page.members %}
-      <div class='small-6 medium-3 large-3 columns'>
-        <div class='mod modTeamMember style-2'>
-          <div class='member'>
-            <img class="avatar" alt="" src="{{site.url}}/{{member.avatar}}" />
-            <div class='overlay'>
-              <ul class='socials'>
-                {% for social in member.socials %}
-                  <li>
-                    <a href='{{social.url}}'>
-                      <i class='{{social.icon_class}}'></i>
-                    </a>
-                  </li>
-                {% endfor %}
-              </ul>
-            </div>
-          </div>
-          <h3>{{member.name}}</h3>
-          <p class='position'>{{member.position}}</p>
-          <p>{{member.desc}}</p>
-          <div class='two spacing'></div>
-        </div>
-      </div>
-    {% endfor %}
-  </div>
-  <div class='two spacing'></div>
-</div>
--->
-
-<div class='full' style='background: #f5f5f5'>
-    <div class='mod modMasonryGallery'>
-      <ul class='gallery'>
-        {% for work in page.works %}
-          <li class='{{work.class}}'>
-            <a href=''>
-              <img alt="" src="{{work.image}}" />
-              <div class='overlay'>
-                <div class='thumb-info'>
-                  <h3>{{work.title}}</h3>
-                  <p>{{work.desc}}</p>
-                </div>
-              </div>
-            </a>
-          </li>
-        {% endfor %}
-      </ul>
-    </div>
-
-    <div class='four  spacing'></div>
-
-</div>
-
-<div class='full'>
-  <div class='row'>
-    <div class='large-12 columns'>
-      <h3>Client Testimonials</h3>
-      <div class='spacing'></div>
-      <p>
-        <em>
-        Electronut Labs delivered excellent results and in a very short time
-        frame. Our original design concept took a last minute turn and left
-        my team and I with a platform we knew very little about…BLE.
-        Electronut labs was able to write us the code we needed using the
-        hardware that was required and got us up and running. Their
-        documentation of the process was clean and neat. The communication was
-        easy even though we are on separate sides of the world. I will be using
-        Electronut Labs in the future for sure.
-        </em>
-      </p>
-      <p>
-        <strong>Carl – Webb Wheel Products</strong>
-      </p>
-
-      <div class='spacing'></div>
-
-      <p>
-        <em>
-        Over the last year, I’ve had Mahesh work on a web site development
-        project for me. I have been very pleased with the results and the
-        quality of communications with him, and resolving issues with project
-        specifications/requirements. He produced results in a timely manner,
-        provided well written documentation, and communicated fluently in English.
-        He also provided support as needed. I am currently planning to engage
-        him on another project to leverage his skills in Python and
-        embedded processor systems development.
-        </em>
-      </p>
-      <p>
-        <strong>Philip - Fliptronics</strong>
-      </p>
-
-      <div class='spacing'></div>
-
-      <p>
-        <em>
-          Electronut Labs has developed a great solution for wireless monitoring of sensors. The integrated solution encompassed interfacing hardware, embedded code and an android app for monitoring the sensor. The entire system was delivered in a compact custom package in a very short time frame. Will definitely engage with them for our hardware projects.
-        </em>
-      </p>
-      <p>
-        <strong>Raviprakash - Hindustan Unilever</strong>
-      </p>
-
-    </div>
-  </div>
-  <div class='four spacing'></div>
-
-
-</div>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="1; url=http://electronut.in">
+        <script type="text/javascript">
+            window.location.href = "http://electronut.in"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this <a href='http://electronut.in'>link</a>.
+    </body>
+</html>
