--- a/bluey.html
+++ b/bluey.html
@@ -103,7 +103,6 @@ works:
         </li>
     </ul>
 
-
       <h3>Getting Started with Bluey</h3>
 
       <p>
@@ -124,6 +123,22 @@ works:
 
 
         <a href="https://www.tindie.com/stores/ElectronutLabs/?ref=offsite_badges&utm_source=sellers_ElectronutLabs&utm_medium=badges&utm_campaign=badge_large"><img src="https://d2ss6ovg47m0r5.cloudfront.net/badges/tindie-larges.png" alt="I sell on Tindie" width="200" height="104"></a>=
+
+      <hr/>
+
+      <h3>Bluey in the News</h3>
+
+      <p>
+        <em>
+        Development boards are assistant tools that help engineers and enthusiasts
+        to become familiarized with hardware development. They simplify the process
+        of controlling and programming hardware, such as microcontrollers and microprocessors.
+        Electronut Labs, an embedded systems consulting company, had produced its new
+        BLE development board “Bluey” with a set of useful sensors and NFC support.
+      </em> - <strong><a href="http://www.electronics-lab.com/">electronics-lab</a></strong>
+
+      </p>
+
      </div>
     </div>
 </div>
