--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@ works:
     desc:
   - image: /images/consulting/flowmeter.jpg
     class: web-design print
-    title: Flow meter
+    title: BLE device
     desc:
   - image: /images/consulting/bluey.jpg
     class: graphic-design
     title: BLE IoT
     desc:
-  - image: /images/consulting/ble-proto.jpg
+  - image: /images/consulting/ble-sl.jpg
     class: graphic-design
-    title: BLE prototyping
+    title: BLE proto
     desc:
 ---
 
