--- a/bluey.html
+++ b/bluey.html
@@ -130,6 +130,15 @@ works:
 
       <p>
         <em>
+        Nordic Semiconductor today announces that Indian electronics hardware developer,
+        Electronut Labs, has selected Nordic’s award-winning nRF52832 Bluetooth® low energy
+        System-on-Chip (SoC) for its ‘Bluey’ development board. The open-source
+        development board is targeted at the hobbyists and makers with limited RF experience.
+        </em> - <strong><a href="https://www.nordicsemi.com/eng/News/News-releases/Product-Related-News/Nordic-nRF52832-SoC-powered-development-board-offers-easy-development-and-faster-prototyping-of-Bluetooth-low-energy-and-NFC-applications">Nordic Semiconductor</a></strong>
+      </p>
+
+      <p>
+        <em>
         Development boards are assistant tools that help engineers and enthusiasts
         to become familiarized with hardware development. They simplify the process
         of controlling and programming hardware, such as microcontrollers and microprocessors.
