--- a/bluey.html
+++ b/bluey.html
@@ -126,6 +126,12 @@ works:
 
       <hr/>
 
+      <h3>Bluey Users Around the Globe...</h3>
+
+      <iframe src="https://www.google.com/maps/d/embed?mid=1wtPol2Pf-BJk9wkT7kQGjhGtsZ8&hl=en" width="640" height="480"></iframe>
+
+      <hr/>
+
       <h3>Bluey in the News</h3>
 
       <p>
