--- a/bluey.html
+++ b/bluey.html
@@ -114,10 +114,9 @@ works:
       <h3>Purchase Bluey</h3>
 
       <p>
-        <strong>Bluey</strong> is available for purchase for international customers
+        <strong>Bluey</strong> is available for purchase
         from our <a href="https://www.tindie.com/stores/ElectronutLabs/"> Tindie store </a>.
-        Customers in India can purchase Bluey from our <a href = "https://www.instamojo.com/ElectronutLabs/bluey-nrf52832-ble-development-board-with-se/">
-          Instamojo store</a>. We also provide discounts for bulk purchases. Do email us at <strong>info@electronut.in</strong>
+        We also provide discounts for bulk purchases. Do email us at <strong>info@electronut.in</strong>
           if you have any questions.
       </p>
 
