--- a/bumpy.html
+++ b/bumpy.html
@@ -48,8 +48,8 @@ title: Electronut Labs - Bumpy SWD programmer
   </p>
 
   <p>
-  **Bumpy** takes advantage of the **ST-Link** support of the BMP, and its design
-  is based on both BMP and Chinese **St-Link V2** clones available for cheap in the market.
+  Bumpy takes advantage of the ST-Link support of the BMP, and its design
+  is based on both BMP and Chinese St-Link V2 clones available for cheap in the market.
   </p>
 
     <h3>Specifications </h3>
