--- a/contact/index.html
+++ b/contact/index.html
@@ -22,7 +22,7 @@ section_id: contact
           <div class='row'>
             <form id='contact_form' action="https://getsimpleform.com/messages?form_api_token=78a419f6742c33296253c36fcf9b36a7" method='POST'>
               <div class='large-12 columns'>
-                <p id='thanks' style='display: none;'>
+                <p id='thanks' style='background-color: green; padding: 4px; color: white; display: none;'>
                   Thanks for contacting us, we'll be in touch soon!
                 </p>
               </div>
