--- a/careers/index.html
+++ b/careers/index.html
@@ -36,6 +36,10 @@ section_id: careers
       <h3>
        Current Job Openings
       </h3>
+      <p>
+        When you write to us, please keep in mind that your covering letter is more important than 
+        your resume.
+      </p>
       <hr/>
       <h4>
         Entry Level Firmware Engineer
