--- a/portfolio/bumpy/index.html
+++ b/portfolio/bumpy/index.html
@@ -112,14 +112,14 @@ section_id: portfolio
         </li>
         <li>
           <strong>Date:</strong>
-          December 2015
+          July 2017
         </li>
         <li>
           <div class='spacing'></div>
           <a href='' title='previous'>
             <i class='icon-left-open'></i>
           </a>
-          <a href='portfolio.html' title='back to work list'>
+          <a href='/portfolio/' title='back to portfolio'>
             <i class='icon-layout'></i>
           </a>
           <a href='' title='next'>
