--- a/portfolio/snapVCC/index.html
+++ b/portfolio/snapVCC/index.html
@@ -117,7 +117,7 @@ section_id: portfolio
           <a href='' title='previous'>
             <i class='icon-left-open'></i>
           </a>
-          <a href='portfolio.html' title='back to work list'>
+          <a href='/portfolio/' title='back to portfolio'>
             <i class='icon-layout'></i>
           </a>
           <a href='' title='next'>
