--- a/portfolio/bluey/index.html
+++ b/portfolio/bluey/index.html
@@ -140,14 +140,14 @@ section_id: portfolio
         </li>
         <li>
           <strong>Date:</strong>
-          May 2017
+          June 2017
         </li>
         <li>
           <div class='spacing'></div>
           <a href='' title='previous'>
             <i class='icon-left-open'></i>
           </a>
-          <a href='portfolio.html' title='back to work list'>
+          <a href='/portfolio/' title='back to portfolio'>
             <i class='icon-layout'></i>
           </a>
           <a href='' title='next'>
