--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@ slides:
       text: Connected Planet
 
 works:
+  - image: images/portfolio/hackaBLE_400.jpg
+    title: hackaBLE
+    link_to: portfolio/hackaBLE/
+    klass: graphi-design
+    desc: Design &amp; Development
   - image: images/portfolio/tracker_400.jpg
     title: Tracker
     link_to: portfolio/tracker/
