--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,6 +4,11 @@ title: Portfolio
 section_id: portfolio
 
 works:
+- image: /images/portfolio/hackaBLE_400.jpg
+  title: hackaBLE
+  link_to: hackaBLE/
+  klass: graphi-design
+  desc: Design &amp; Development
 - image: /images/portfolio/tracker_400.jpg
   title: Tracker
   link_to: tracker/
