--- a/contact/index.html
+++ b/contact/index.html
@@ -40,14 +40,18 @@ section_id: contact
       </div>
       <div class='medium-4 columns'>
         <div class='contact-details'>
-          <h4>Address:</h4>
+          <h4>Address</h4>
           <p>Electronut Labs</p>
-          <p>IKP Eden, 16 Bhuvanappa Layout</p>
-          <p>Tavarakere Main Rd, Bangalore 560029</p>
+          <p>M01 Navarathna Manor</p>
+          <p>No. 37 Subbarama Chetty Road</p>
+          <p>Basavangudi</p>
+          <p>Bangalore 560004</P>
           <p>India</p>
-          <h4>Phone:</h4>
+          <h4>Location Map</p>
+          <p><a href="https://goo.gl/maps/4UksGejzewv">https://goo.gl/maps/4UksGejzewv</a></p>
+          <h4>Phone</h4>
           <p>+91-9108426444</p>
-          <h4>Email:</h4>
+          <h4>Email</h4>
           <p>info@electronut.in</p>
         </div>
       </div>
