--- a/contact/index.html
+++ b/contact/index.html
@@ -47,8 +47,8 @@ section_id: contact
           <p>Basavangudi</p>
           <p>Bangalore 560004</P>
           <p>India</p>
-          <h4>Location Map</p>
-          <p><a href="https://goo.gl/maps/4UksGejzewv">https://goo.gl/maps/4UksGejzewv</a></p>
+          <h4>Location</p>
+          <p><a href="https://goo.gl/maps/4UksGejzewv">Google Maps Link</a></p>
           <h4>Phone</h4>
           <p>+91-9108426444</p>
           <h4>Email</h4>
