--- a/contact/index.html
+++ b/contact/index.html
@@ -18,28 +18,12 @@ section_id: contact
   <div class='full'>
     <div class='row'>
       <div class='medium-8 columns'>
-        <div class='form'>
-          <div class='row'>
-            <form id='contact_form' action="https://getsimpleform.com/messages?form_api_token=78a419f6742c33296253c36fcf9b36a7" method='POST'>
-              <div class='large-12 columns'>
-                <p id='thanks' style='background-color: green; padding: 4px; color: white; display: none;'>
-                  Thanks for contacting us, we'll be in touch soon!
-                </p>
-              </div>
-              <div class='medium-12 columns'>
-                <input class='required' name='name' placeholder='NAME' type='text'>
-                <input class='required email' name='email' placeholder='EMAIL' type='text'>
-                <input class='required' name='subject' placeholder='SUBJECT' type='text'>
-                <textarea class='required' name='message' placeholder='MESSAGE'></textarea>
-                <input class='button white' type='submit'>
-              </div>
-            </form>
-          </div>
-        </div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.523568478051!2d77.56834161455156!3d12.93831389087772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae158c2cd57ae3%3A0xacc07472610ce2c8!2sElectronut+Labs!5e0!3m2!1sen!2sin!4v1519271898235" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         <div class='two spacing'></div>
       </div>
       <div class='medium-4 columns'>
         <div class='contact-details'>
+          <div class='two spacing'></div>
           <h4>Address</h4>
           <p>Electronut Labs</p>
           <p>M01 Navarathna Manor</p>
@@ -47,8 +31,6 @@ section_id: contact
           <p>Basavangudi</p>
           <p>Bangalore 560004</P>
           <p>India</p>
-          <h4>Location</p>
-          <p><a href="https://goo.gl/maps/4UksGejzewv">Google Maps Link</a></p>
           <h4>Phone</h4>
           <p>+91-9108426444</p>
           <h4>Email</h4>
